# personal-network-simulator

./: README.md  pyproject.toml  requirements.txt
persona_sim/: __init__.py  cli.py
persona_sim/agents/: __init__.py  memory.py  persona.py  style.py
persona_sim/analysis/: __init__.py  convergence.py  independence.py  metrics.py
persona_sim/network/: __init__.py  dynamics.py  graph.py
persona_sim/simulation/: __init__.py  engine.py  narratives.py
persona_sim/tests/: __init__.py  test_agents.py  test_network.py  test_simulation.py
persona_sim/visualization/: __init__.py  plots.py
